# 3DPrinterScreen

./: .gitignore  .gitmodules  BetsyScreen.code-workspace  CMakeLists.txt  LICENSE  README.md  partitions_two_ota_SPIFFS.csv  platformio.ini  sdkconfig
components/GCodeRenderer/: CMakeLists.txt  GCodeRenderer.cpp
components/dbg_log/: CMakeLists.txt  dbg_log.c
hardware/ESPreen/: ESPreen.csv  ESPreen.kicad_pcb  ESPreen.kicad_prl  ESPreen.kicad_pro  ESPreen.kicad_sch  ESPreen.step  ESPreen.xml  fp-info-cache
lib/MCUFRIEND_kbv/: MCUFRIEND_kbv.cpp  MCUFRIEND_kbv.h
lib/TouchScreen_ESP32/: TouchScreen.cpp  TouchScreen.h  library.properties
main/: CMakeLists.txt  Free_Fonts.h  Kconfig.projbuild  Screen.cpp  Screen.h  idf_component.yml  lcdUI.cpp  lcdUI.h  main.cpp  parser.cpp  parser.h  printer.cpp  printer.h  tftLCD.cpp  tftLCD.h  utility.cpp  utility.h  widgets.cpp  widgets.h
main/Menu/: black_Scr.cpp  black_Scr.h  black_w.cpp  black_w.h  config_Scr.cpp  config_Scr.h  control_Scr.cpp  control_Scr.h  displayConf_Scr.cpp  displayConf_Scr.h  draw_Scr.cpp  draw_Scr.h  extrude_Scr.cpp  extrude_Scr.h  fileBrowser_Scr.cpp  fileBrowser_Scr.h  gcodePreview_Scr.cpp  gcodePreview_Scr.h  heaters_Scr.cpp  heaters_Scr.h  info_Scr.cpp  info_Scr.h  info_w.cpp  info_w.h  preview_Scr.cpp  preview_Scr.h  print_Scr.cpp  print_Scr.h
src/: Configuration.h  Vector.h  lcdUI.cpp  lcdUI.h  machine.cpp  machine.h  main.cpp  main.h  parser.cpp  parser.h  serial.cpp  serial.h  tftLCD.cpp  tftLCD.h  webInterface.cpp  webInterface.h  widgets.cpp  widgets.h
src/Menu/: black_w.cpp  black_w.h  (+6 more)
(+28 files in other folders)
